# file_explorer

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
